fixed menu icon layout on smaller screens

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ a {
 }
 .menuimg {
 	border-radius: 50%;
+	margin-right: 2%;
 }
 /* Dropdown button */
 .dropdown .dropbtn {
